<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, Proxy5Activity!</string>
    <string name="app_name">Proxy5</string>
    <string name="receive">Receive</string>
    <string name="pick_file">Pack File</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="address">Network Address</string>
    <string name="settings">Settings</string>
    <string name="tether">Tether</string>
    <string name="user">User Name</string>
    <string name="user_summary">proxy user name</string>
    <string name="password">Password</string>
    <string name="password_summary">proxy password</string>
    <string name="enable_authorization">Enable Authorization</string>
    <string name="enable_authorization_summary">enable authorization</string>
    <string name="port">Port</string>
    <string name="port_summary">the listen tcp port of proxy</string>
    <string name="usb_binding">USB Binding</string>
    <string name="usb_binding_summary">auto start proxy service when usb wire connected</string>
    <string name="auto_tethering">USB Tether</string>
    <string name="auto_tethering_summary">auto tethering usb when usb wire connected</string>
    <string name="enable_smart_authorization">Enable Smart Authorization</string>
    <string name="enable_smart_authorization_summary">enable smart authorization</string>
    <string name="authorization_url">Smart Authorization URL</string>
    <string name="authorization_url_summary">smart authorization URL</string>
    <string name="enable_http_mode">Enable HTTP Mode</string>
    <string name="enable_http_mode_summary">enable http mode</string>

</resources>
