<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<CheckBoxPreference android:key="anonymous"
		android:title="@string/anonymous"
		android:summary="@string/anonymous_smmary"
		android:defaultValue="true"/>
	<EditTextPreference
		android:name="user"
		android:title="@string/user"
		android:summary="@string/user_summary"
		android:defaultValue="proxy"
		android:dependency="anonymous"
		android:key="user" />
	<EditTextPreference
		android:name="password"
		android:summary="@string/password_summary"
		android:title="@string/password"
		android:defaultValue="AdZnGWTM0dLT"
		android:dependency="anonymous"
		android:key="password" />
	<EditTextPreference android:key="port"
		android:title="@string/port_time"
		android:summary="@string/port_summary"
		android:defaultValue="15"
		android:inputType="phone"
		android:digits="0123456789"/>
	<CheckBoxPreference android:key="usb_binding"
		android:title="@string/usb_binding"
		android:summary="@string/usb_binding_summary"
		android:defaultValue="false"/>
	<CheckBoxPreference android:key="auto_tethering"
		android:title="@string/auto_tethering"
		android:summary="@string/auto_tethering_summary"
		android:defaultValue="false"/>
</PreferenceScreen>
