<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/networkaddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/address" />

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal" >
		<Button
			android:id="@+id/start"
        	android:layout_weight="1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/start" />

		<Button
			android:id="@+id/stop"
        	android:layout_weight="1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/stop" />

		<Button
			android:id="@+id/tether"
        	android:layout_weight="1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/tether" />
	</LinearLayout>

</LinearLayout>
